--- a/test.html
+++ b/test.html
@@ -42,7 +42,7 @@
         // var value=11;
 
         var value = 11;
-        var initvalue = 22;
+        var initvalue = prompt("请输入你的数字");
 
         function addition() {
             var value = initvalue;
